# student-grades-calculator-clean

./: .gitignore  CMakeLists.txt  Makefile  README.md  deque_version.cpp  file_utils.cpp  file_utils.h  generator.cpp  list_version.cpp  main.cpp  person.cpp  person.h  split_strategies.h  timer.cpp  timer.h
